# Frienance

./: .gitignore  .metadata  ARCHITECTURE.md  README.md  pubspec.yaml
.github/: copilot-instructions.md
android/app/: build.gradle.kts
backend/features/receipt-parser/: config.yml  pyproject.toml  stats.csv
backend/features/receipt-parser/receipt_parser_core/: __init__.py  enhancer.py  parse.py  receipt.py  receipt_recognizer.py
backend/features/receipt-parser/tests/: test_parser.py
backend/receipt-parser/: Dockerfile  Makefile  stats.csv
core/: initialization.dart
core/features/: service_provider.g.dart
core/model/: receipt.dart
core/routes/: app_router.dart
docs/: FUZZY_MATCHER_TEST_REPORT.md
frontend/: README.md  firebase.json  package-lock.json  pubspec.yaml
frontend/lib/: firebase_options.dart  main.dart
frontend/linux/: CMakeLists.txt  my_application.cc
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
ios/Runner/: Info.plist
lib/: main.dart
lib/cache/: config.json
lib/models/: receipt.dart
lib/screens/: receipt_scanner_screen.dart
lib/services/: flutter_runner.dart  gemini_service.dart  runner.dart
lib/utils/: image_btw_mat_converter.dart  logger.dart  mat_extensions.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
receipt-parser/: README.md  config.yml  pyproject.toml
receipt-parser/receipt_parser_core/: enhancer.py  parse.py  receipt_recognizer.py
scripts/: debug_migrate_adb.sh
test/: adaptive_fuzzy_matcher_test.dart
web/: index.html
windows/: CMakeLists.txt
(+109 files in other folders)
