[tool.poetry]
name = "receipt_parser_core"

version = "0.2.5"
description = "A supermarket receipt parser written in Python using tesseract OCR"

authors = ["Nam H Bui <77969945+NamHaiBui@users.noreply.github.com>"]
license = "Apache-2.0"

homepage = "https://github.com/NamHaiBui/receipt-parser"
repository = "https://github.com/NamHaiBui/receipt-parser"

keywords = ["receipt", "ocr", "parser"]

readme = "README.md"

[tool.poetry.build]
generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.10.4"
pyyaml = "^6.0.1"
python-dateutil = ">=2.8.1"
Pillow = ">=8.1.2"
py = ">=1.10.0"
wand = ">=0.6.10"
pytesseract = "^0.3.10"
terminaltables = ">=3.1.0"
numpy = ">=1.26.4"
opencv-python = "^4.10.0.82"
scipy = ">=1.13.1" 

[tool.poetry.dev-dependencies]
pytest = ">=7.0.0"
black = {version = "^22.6", allow-prereleases = true}

[tool.poetry.scripts]
run = 'receipt_parser_core:main'

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"